fix: word-wrap to break-all

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -15,7 +15,7 @@ a {
 
 p, h1, h2, h3, h4, h5 {
   margin: 0;
-  word-break: keep-all;
+  word-break: break-all;
 }
 
 .stretch {
