--- a/src/views/components/AboutSection/AboutSection.module.scss
+++ b/src/views/components/AboutSection/AboutSection.module.scss
@@ -6,10 +6,9 @@
   .container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     .titleContainer {
       position: relative;
-      margin-right: 101px;
       h3 {
         position: absolute;
         font-size: 24px;
